# sdk-all-in-one

./: CMakeLists.txt  README.md
doc/: SDK-all-in-one设计.docx  统一sdk开发计划.xlsx  统一sdk设计.vsd  统一数据类型.docx
include/ont/: config.h  video_rvod.h
protocols/base/: device.c
protocols/mqtt/: ont_mqtt_private.c
sample/: CMakeLists.txt
sample/edp/: sample-linux.c
sample/mqtt/: ont_mqtt_sample_main.c
test/: CMakeLists.txt
test/base/: CMakeLists.txt  device_gtest.cpp  dynamic-stub-manager.h  tcp_channel_test.cpp  tcp_channel_test.h  test_formatter.cpp  test_main.cpp  test_parser.cpp
test/edp/: CMakeLists.txt  main.cpp  pack_connect.cpp  pack_replycmd.cpp  pack_senddp.cpp  tool.h  unpack_cmd.cpp  unpack_saveack.cpp
test/mqtt/: CMakeLists.txt  test_mqtt.cpp
